--- a/webapp/view/Main.view.xml
+++ b/webapp/view/Main.view.xml
@@ -53,14 +53,13 @@
 											<l:GridData span="XL1 L2 M8 S8"/>
 										</layoutData>
 									</ComboBox>
-									<Input id="idsubcno" valueHelpRequest="helpRequest" visible="true" showValueHelp="true" liveChange="poEnter" change="onChangeWI">
+									<Input id="idsubcno" valueHelpRequest="_onVHReqSubCategory" visible="true" showValueHelp="true" liveChange="poEnter" change="onChangeWI">
 										<layoutData>
 											<l:GridData span="XL1 L2 M8 S8"/>
 											<!--<f:ColumnElementData cellsSmall="2" cellsLarge="2"/>-->
 										</layoutData>
 									</Input>
 									<Input id="idsubsubno" showValueHelp="false" visible="true" >
-                                    <!-- valueHelpRequest="helpRequestSubsub" -->
 										<layoutData>
 											<l:GridData span="XL1 L1 M8 S8"/>
 										</layoutData>
