--- a/webapp/view/Main.view.xml
+++ b/webapp/view/Main.view.xml
@@ -3,7 +3,7 @@
 	<!--<Shell id="shell">-->
 		<App id="app">
 			<pages>
-				<Page title="{i18n>title}" titleAlignment="Center" >
+				<Page title="{i18n>title}">
 					<headerContent>
 						<Image src="./image/airbus.png" height="20px" width="50px"/>
 					</headerContent>
@@ -34,18 +34,9 @@
 										<core:Item key="{Nctype}" text="{NctypeDesc}"/>
 									</ComboBox>
 									<Label text="In Which Area" required="true"/>
-									<!--<Input id="idin" width="50%" liveChange="inEnter"/>-->
-									<ComboBox id="idiwa" width="200px" items="{/Area_soSet}" change="onNCAreaChange">
-										<core:Item key="{Sequencearea}" text="{Area}"/>
+									<ComboBox id="idiwa" width="200px" items="{inWhichAreaModel>/}" change="onNCAreaChange">
+										<core:Item key="{inWhichAreaModel>Sequencearea}" text="{inWhichAreaModel>Area}"/>
 									</ComboBox>
-									
-									<!--<Input id="idnc" valueHelpRequest="helpRequest" placeholder="Link To" liveChange="poEnter" visible="false">-->
-									<!--	<layoutData>-->
-									<!--		<l:GridData span="XL1 L2 M2 S4"/>-->
-									<!--<f:ColumnElementData cellsSmall="2" cellsLarge="2"/>-->
-									<!--	</layoutData>-->
-									<!--</Input>-->
-									<!--<Text/>-->
 									<Label text="Sub Category" required="true"></Label>
 									<ComboBox id="idlinksubc" items="{/Subcat_SoSet}" change="onChngSubCat">
 										<core:Item key="{SequenceCat}" text="{Subcat}"/>
@@ -56,7 +47,6 @@
 									<Input id="idsubcno" valueHelpRequest="_onVHReqSubCategory" visible="true" showValueHelp="true" liveChange="poEnter" change="onChangeWI">
 										<layoutData>
 											<l:GridData span="XL1 L2 M8 S8"/>
-											<!--<f:ColumnElementData cellsSmall="2" cellsLarge="2"/>-->
 										</layoutData>
 									</Input>
 									<Input id="idsubsubno" showValueHelp="false" visible="true" >
@@ -75,7 +65,7 @@
 					<footer>
 						<Toolbar>
 							<ToolbarSpacer/>
-							<Button text="{i18n>Save}" id="idsave" type="Emphasized" press="onPressNext"/>
+							<Button text="{i18n>Save}" id="idsave" type="Emphasized" press="onPressSave"/>
 							<Button text="{i18n>Cancel}" id="idcancel" type="Emphasized" press="onPressCancel"/>
 							<!--<Image src="./image/airbus.png" height="20px" width="40px"/>-->
 						</Toolbar>
